Fix bug on firefox 54 due to clip-path css property

--- a/src/css/natural-carousel.scss
+++ b/src/css/natural-carousel.scss
@@ -21,8 +21,6 @@ $nextPrevWidth: 70px;
 
 .natural-carousel {
 
-    clip-path: content-box;
-
     *,
     *::after,
     *::before {
